feat(monitoring):add log DB insert api